--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,103 @@
+@import url('https://fonts.googleapis.com/css2?family=Freckle+Face&family=Roboto:wght@400;500;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
 
+body {
+  background: #fffef2;
+  font-size: 1.6rem;
+}
+
+.flex-container {
+  display: flex;
+}
+
+.centre {
+  align-items: center;
+  justify-content: center;
+}
+
+.w-100-mh-100vh {
+  width: 100%;
+  min-height: 100vh;
+}
+
+.quiz-container {
+  width: 95%;
+  padding: 1rem;
+  background: #ecf6ff;
+  border: 2px solid #d9ebf5;
+  border-radius: 0.5rem;
+}
+
+.quiz-header {
+  width: 100%;
+  padding: 1rem;
+}
+
+.title {
+  width: 100%;
+  padding: 1rem;
+  font-family: "Freckle Face", cursive;
+  font-size: 5.2rem;
+  text-align: center;
+}
+
+.quiz-body {
+  width: 100%;
+  padding: 1rem;
+  flex-wrap: wrap;
+}
+
+.category-icon {
+  width: 60%;
+  height: auto;
+  margin: 1rem 0;
+  padding: 1rem;
+  filter: drop-shadow(0.7rem 0.7rem 0.5rem #555555);
+}
+
+.question {
+  width: 100%;
+  padding: 1rem;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.8rem;
+}
+
+.answer {
+  width: 100%;
+  padding: 1rem 2rem;
+  margin: 0.5rem 0;
+  background: #ffffff;
+  font-size: 1.7rem;
+  border: 1.5px solid #d9ebf5;
+  border-bottom: 3px solid #d9ebf5;
+}
+
+.selected-answer {
+  border-left: 5px solid #136cbc;
+}
+
+.quiz-footer {
+  width: 100%;
+  padding: 1rem;
+}
+
+.submit-answer-btn {
+  width: 100%;
+  padding: 0.7rem;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 2rem;
+  background: #f27d76;
+  font-size: 1.6rem;
+  color: #eeeeee;
+}
