--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ body {
 .submit-answer-btn {
   width: 100%;
   padding: 0.7rem;
+  margin: 0.5rem 0;
   text-transform: uppercase;
   border: none;
   border-radius: 2rem;
