feat: change bg colour

--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,7 @@ html {
 }
 
 body {
-  /* background: #fffef2; */
-  background: #ff1111;
+  background: #fffef2;
   font-size: 1.6rem;
   font-family: "Roboto", sans-serif;
 }
